# cee-devpulsar

./: Cargo.toml  Makefile  REPRODUCIBLE_BUILD.md  TODO.md  package.json  rust-toolchain.toml
.github/: zizmor.yml
.github/workflows/: contract.yml  cost-estimate.yml  dapp-ipfs.yml  dapp-tests.yml  e2e.yml  events.yml  lint.yml  parse_costs.py  python-release.yml  reproducible-build-attestation.yml  sbom-pg-atlas.yml  sbom.yml  test_parse_costs.py  trivy-fs.yml
.radicle/: ci.sh  native.yaml
contracts/tansu/: Cargo.toml
contracts/tansu/src/: contract_dao.rs  errors.rs  events.rs  lib.rs
contracts/tansu/src/tests/: mod.rs  test_cost_estimates.rs  test_dao.rs  test_tally_differential.rs
dapp/: package.json  vitest.config.ts
dapp/src/components/: EnhancedContractFunctionSelector.tsx
dapp/src/components/page/dashboard/: CreateProjectModal.tsx
dapp/src/components/page/project/: DonateModal.tsx
dapp/src/schemas/: validation.ts
dapp/src/service/: ContributionMetricsService.ts  FlowService.ts  GitLogService.ts
dapp/src/utils/: anonymousTally.ts  anonymousVoting.ts  contractErrors.ts
dapp/tests/: anonymous-voting-lifecycle.spec.ts
dapp/tests/differential/: differential-tally-spec.md  scenarios.json  tallyDifferential.test.ts
dapp/tests/unit/service/: ContributionMetricsService.test.ts  GitLogService.fuzz.test.ts
dapp/workers/ipfs-delegation/: README.md  load-test.js  package.json  wrangler.toml
dapp/workers/ipfs-delegation/src/: index.ts  rateLimit.test.ts  rateLimit.ts
tansu/tests/: conftest.py  test_chaos_ingest.py
website/: package.json
(+3 files in other folders)
